--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1018,6 +1018,7 @@ plugins:
         name: 'Realistic Weapon Positions'
     group: *reproccerGroup
 
+  - name: '(SMIM-.+|StaticMeshImprovementMod)\.esp'
   - name: 'SMIM-Merged-All.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/8655/' ]
     dirty:
