--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1019,8 +1019,10 @@ plugins:
     group: *reproccerGroup
 
   - name: '(SMIM-.+|StaticMeshImprovementMod)\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/8655/'
+        name: 'Static Mesh Improvement Mod'
   - name: 'SMIM-Merged-All.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/8655/' ]
     dirty:
       - <<: *quickClean
         crc: 0x26FC8290
@@ -1030,13 +1032,11 @@ plugins:
       - crc: 0x7B6DD44D
         util: 'TES5Edit v4.0.3h (Hotfix 1)'
   - name: 'SMIM-ShackRoofFixes.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/8655/' ]
     clean:
       # v2.08
       - crc: 0x7938E7F0
         util: 'TES5Edit v4.0.2j'
   - name: 'SMIM-ShackRoofFixesDragonborn.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/8655/' ]
     clean:
       # v2.08
       - crc: 0xFC4F77F9
