Add `obsolete` message
  * To obsolete plugin.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1043,6 +1043,7 @@ plugins:
         util: 'TES5Edit v4.0.2j'
   - name: 'StaticMeshImprovementMod.esp'
     msg:
+      - *obsolete
       - type: say
         content:
           - lang: ru
