--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1042,13 +1042,7 @@ plugins:
       - crc: 0xFC4F77F9
         util: 'TES5Edit v4.0.2j'
   - name: 'StaticMeshImprovementMod.esp'
-    msg:
-      - *obsolete
-      - type: say
-        content:
-          - lang: ru
-            text: 'Вы можете использовать данный esp для версии 1.20-1.26 и вероятно, более новых, если, в очередном обновлении SMIM, не последовало обновления esp.'
-        condition: 'checksum("StaticMeshImprovementMod.esp", 8806A693)'
+    msg: [ *obsolete ]
 
   - name: 'Unique BOOZE Bottles( Alternate Names Version)?\.esp'
     url:
