--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1362,7 +1362,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'rcrnShaders.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1875/' ]
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1875/'
+        name: 'RCRN AE -- HDR Lighting and Weather Enhancement'
     msg:
       - type: say
         content:
