--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1361,6 +1361,66 @@ plugins:
       - crc: 0x13A02FA4
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'rcrnShaders.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/1875/'
+        name: 'RCRN AE -- HDR Lighting and Weather Enhancement'
+    dirty:
+      # Skyrim\RCRN\Optionals\fpresets\classic
+      - <<: *quickClean
+        crc: 0x06679BAF
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 26
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\classic\fast
+      - <<: *quickClean
+        crc: 0x35E6ED89
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 26
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\classic\slow
+      - <<: *quickClean
+        crc: 0x60E3B96F
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 26
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\legacy
+      - <<: *quickClean
+        crc: 0xB012D842
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 29
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\legacy\fast
+      - <<: *quickClean
+        crc: 0xD6A9DCF7
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 29
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\legacy\slow
+      - <<: *quickClean
+        crc: 0xDA725D74
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 29
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\pure
+      - <<: *quickClean
+        crc: 0xC1737A79
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 26
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\pure\fast
+      - <<: *quickClean
+        crc: 0x3D16E922
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 26
+        udr: 3
+      # Skyrim\RCRN\Optionals\fpresets\pure\slow
+      - <<: *quickClean
+        crc: 0xF3813F94
+        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
+        itm: 26
+        udr: 3
+
   - name: 'Relighting ?Skyrim.*\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/17609/'
@@ -22967,74 +23027,7 @@ plugins:
         crc: 0x200633E2
         util: '[TES5Edit v4.0.4b](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 1
-  - name: 'rcrnShaders.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/1875/' ]
-    msg:
-      - type: say
-        content:
-          - lang: en
-            text: 'Make sure you have bEnableFileSelection=1 in SkyrimPrefs.ini under [Launcher].'
-          - lang: de
-            text: 'Stellen Sie sicher, dass bEnableFileSelection=1 in SkyrimPrefs.ini unter [Launcher] angegeben ist.'
-          - lang: ja
-            text: 'ランチャーから必ずSkyrimPrefs.iniのbEnableFileSelectionを=1にセットしてください。'
-          - lang: ru
-            text: 'Убедитесь, что строка bEnableFileSelection=1 в SkyrimPrefs.ini находитсся в секции [Launcher].'
-    dirty:
-      # Skyrim\RCRN\Optionals\fpresets\classic
-      - <<: *quickClean
-        crc: 0x06679BAF
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\classic\fast
-      - <<: *quickClean
-        crc: 0x35E6ED89
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\classic\slow
-      - <<: *quickClean
-        crc: 0x60E3B96F
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\legacy
-      - <<: *quickClean
-        crc: 0xB012D842
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 29
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\legacy\fast
-      - <<: *quickClean
-        crc: 0xD6A9DCF7
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 29
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\legacy\slow
-      - <<: *quickClean
-        crc: 0xDA725D74
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 29
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\pure
-      - <<: *quickClean
-        crc: 0xC1737A79
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\pure\fast
-      - <<: *quickClean
-        crc: 0x3D16E922
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 3
-      # Skyrim\RCRN\Optionals\fpresets\pure\slow
-      - <<: *quickClean
-        crc: 0xF3813F94
-        util: '[TES5Edit v4.0.3h (Hotfix 1)](https://www.nexusmods.com/skyrim/mods/25859)'
-        itm: 26
-        udr: 3
+
   - name: 'rcrnPlus.esp'
     url: [ 'https://www.nexusmods.com/skyrim/mods/180/' ]
     dirty:
