--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2700,7 +2700,7 @@ plugins:
         util: '[TES5Edit v4.0.2f](https://www.nexusmods.com/skyrim/mods/25859)'
         itm: 3
 
-###### Gameplay - Skills & Perks ######
+###### Gameplay - Skills, Perks & Leveling ######
   - name: 'Perks Unbound( - Helmless Warrior)?( - (Dawnguard|Dragonborn|Merged))?\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/19538/'
