--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -2715,7 +2715,9 @@ plugins:
     inc: [ 'Perks Unbound.esp' ]
 
   - name: 'SmartTraining.esp'
-    url: [ 'https://www.nexusmods.com/skyrim/mods/70970/' ]
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/70970/'
+        name: 'Smart Training - Tweaked'
     msg:
       - type: error
         content: 'The Requiem Patch provided on this plugin''s mod page is incompatible with Requiem v2.0.0+.'
