Update global SKSE messages (#836)
* Formatting changes
  * Sort Latest Version global messages after Latest LOOT Thread.
  * Remove unnecessary newline.

* Update global SKSE messages
  * Specificy version of SKSE that should be used (Classic).
  * Remove redundancy from conditions & take advantage of short-circuit
    eval.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -505,14 +505,22 @@ globals:
 # Latest LOOT Thread
   - *latestLOOTThread
 
+# Latest Version
+  # SKSE
+  - <<: *versionOldX
+    subs: [ '**[SKSE](https://skse.silverlock.org) Classic**' ]
+    condition: 'file("../skse_loader.exe") and version("../skse_loader.exe", "0.1.7.3", <)'
+  - <<: *versionUpToDateX
+    subs: [ '**SKSE Classic**' ]
+    condition: 'version("../skse_loader.exe", "0.1.7.3", >=)'
+
 # SKSE
   # Missing
   - <<: *scriptExtenderMissing
     subs:
       - 'SKSE'
-      - '[SKSE](https://skse.silverlock.org)'
+      - '[Skyrim Script Extender](https://skse.silverlock.org) Classic'
     condition: 'file("SKSE/Plugins/([^\.]+\.dll)") and not file("../skse_loader.exe")'
-
   # Required Scripts
   - <<: *scriptExtenderRequiredScripts
     subs:
@@ -539,15 +547,6 @@ globals:
   - <<: *useOnlyOneX
     subs: [ '**Fores New Idles in Skyrim** or **Nemesis Unlimited Behavior Engine**' ]
     condition: 'file("Nemesis_Engine/Nemesis Unlimited Behavior Engine.exe") and file("tools/GenerateFNIS_for_Users/GenerateFNISforUsers.exe")'
-
-# Latest Version
-  # SKSE
-  - <<: *versionOldX
-    subs: [ '**Script Extender ([SKSE](https://skse.silverlock.org))**' ]
-    condition: 'version("../skse_loader.exe", "0.1.7.3", <) and file("../skse_loader.exe")'
-  - <<: *versionUpToDateX
-    subs: [ '**Script Extender ([SKSE](https://skse.silverlock.org))**' ]
-    condition: 'version("../skse_loader.exe", "0.1.7.3", >=) and file("../skse_loader.exe")'
 
 groups:
   - name: &updateEsmGroup Update.esm
