Add Cell Music group
  * For mods that edit cell music settings.
  * Between Skyrim Unlocked & Lighting.
  * Similar position as in SSE masterlist.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -590,8 +590,12 @@ groups:
   - name: &unlockedGroup Skyrim Unlocked
     after: [ *alternateStartGroup ]
 
-  - name: &lightingGroup Lighting
+  - name: &cellMusicGroup Cell Music
+    description: 'A group for modules that modify cell music.'
     after: [ *unlockedGroup ]
+
+  - name: &lightingGroup Lighting
+    after: [ *cellMusicGroup ]
 
   - name: &dynamicPatchGroup Dynamic Patches
     after: [ *lightingGroup ]
