--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1117,6 +1117,12 @@ plugins:
       - crc: 0x1DD2CB8E
         util: 'TES5Edit v4.0.4b'
 
+  - name: 'Player Home Tavern Music( - (Dragonborn|Hearthfire|Legendary))?\.esp'
+  - name: 'Player Home Tavern Music( - (Dragonborn|Hearthfire))?\.esp'
+  - name: 'Player Home Tavern Music - (Dragonborn|Hearthfire)\.esp'
+  - name: 'Player Home Tavern Music - Dragonborn.esp'
+  - name: 'Player Home Tavern Music - Legendary.esp'
+
   - name: 'SoS - Civilization( ?-Patch(CoT.*|RCRN|RLO.*|SPO))?\.esp'
     url:
       - link: 'https://www.nexusmods.com/skyrim/mods/20193/'
