--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1118,6 +1118,9 @@ plugins:
         util: 'TES5Edit v4.0.4b'
 
   - name: 'Player Home Tavern Music( - (Dragonborn|Hearthfire|Legendary))?\.esp'
+    url:
+      - link: 'https://www.nexusmods.com/skyrim/mods/17627/'
+        name: 'Player Home Tavern Music'
   - name: 'Player Home Tavern Music( - (Dragonborn|Hearthfire))?\.esp'
   - name: 'Player Home Tavern Music - (Dragonborn|Hearthfire)\.esp'
   - name: 'Player Home Tavern Music - Dragonborn.esp'
