Add `alreadyInX` message
  * Legendary version contains other plugins.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1123,6 +1123,10 @@ plugins:
         name: 'Player Home Tavern Music'
     group: *cellMusicGroup
   - name: 'Player Home Tavern Music( - (Dragonborn|Hearthfire))?\.esp'
+    msg:
+      - <<: *alreadyInX
+        subs: [ '**Player Home Tavern Music - Legendary.esp**' ]
+        condition: 'active("Player Home Tavern Music - Legendary.esp")'
     # Group rules to avoid cyclic interactions
   - name: 'Player Home Tavern Music - (Dragonborn|Hearthfire)\.esp'
     after: [ 'Player Home Tavern Music.esp' ]
