Add `sortMasters` message
  * Dragonborn is before Hearthfire in MAST list.
  * v2.1.

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1133,6 +1133,9 @@ plugins:
   - name: 'Player Home Tavern Music - Dragonborn.esp'
     after: [ 'Player Home Tavern Music - Hearthfire.esp' ]
   - name: 'Player Home Tavern Music - Legendary.esp'
+    msg:
+      - <<: *sortMasters
+        condition: 'checksum("Player Home Tavern Music - Legendary.esp", C38CDF1A)'
 
   - name: 'SoS - Civilization( ?-Patch(CoT.*|RCRN|RLO.*|SPO))?\.esp'
     url:
