--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -1122,6 +1122,7 @@ plugins:
       - link: 'https://www.nexusmods.com/skyrim/mods/17627/'
         name: 'Player Home Tavern Music'
     group: *cellMusicGroup
+    tag: [ C.Music ]
   - name: 'Player Home Tavern Music( - (Dragonborn|Hearthfire))?\.esp'
     msg:
       - <<: *alreadyInX
