Update cleaning data: version 2.1.4

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -23790,8 +23790,8 @@ plugins:
     group: *alternateStartGroup
     clean:
       # Skyrim Unbound Reborn
-      - crc: 0x46F9E2D7
-        util: 'TES5Edit v4.0.3h (Hotfix 1)'
+      - crc: 0x92BB5C8A
+        util: 'TES5Edit v4.0.4c'
   - name: 'Silent khajiit night-eye.esp'
     after: [ 'nighteyetoggle.esp' ]
   - name: 'Acquisitive Soul Gems.esp'
