Update section name

--- a/masterlist.yaml
+++ b/masterlist.yaml
@@ -721,7 +721,7 @@ plugins:
       - 'HighResTexturePack01.esp'
       - 'HighResTexturePack02.esp'
 
-###### Unofficial Patches ######
+###### Base Game Patches ######
   - name: 'Unofficial (Skyrim|Dawnguard|Hearthfire|Dragonborn) Patch.esp'
     group: *unofficialPatchGroup
     msg:
